--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
   * {
     margin: 0;
     padding: 0;
-    font-family: "Poppins", sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     letter-spacing: -0.2px;
     font-size: 16px;
     line-height: 1.5;
@@ -32,6 +32,7 @@
   }
   
   .contact-us {
+    display: flex;
     background: var(--color-bg);
     padding: 50px 100px;
     border: 2px solid var(--color-primary);
@@ -41,8 +42,10 @@
     margin-bottom: 50px;
   }
   
-  .form-section {
+  .form-section,
+  .form-group {
     margin-top: 30px;
+    width: 100%
   }
   
   body, p, input, select, textarea, button {
@@ -60,6 +63,7 @@
     padding: var(--ruler);
     width: calc(var(--ruler) * 20);
     margin: 0 auto;
+    max-width: 600px;
   }
   
   input, select {
@@ -86,7 +90,19 @@
     box-shadow: inset 1px 1px 2px var(--color-shadow), inset -1px -1px 2px var(--color-white);
   }
   
-  .label {
+  .inilogo {
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px; 
+}
+
+  .logo {
+    width: 300px;
+    height: auto;
+  }
+
+  .judul {
+    margin-bottom: 20px;
     font-size: 1.5rem;
   }
   
@@ -101,6 +117,7 @@
     outline: none;
     border: 1px solid black;
     box-shadow: 3px 3px 1px 1px #95a4ff, 3px 3px 1px 2px black;
+    margin-top: 20px
   }
   
   button:hover {
