--- a/main.css
+++ b/main.css
@@ -90,13 +90,14 @@
   }
   
   .inilogo {
-    width: 300px;
+    display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 20px; 
 }
 
   .logo {
+    width: 300px;
     height: auto;
   }
 
