--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
   * {
     margin: 0;
     padding: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     letter-spacing: -0.2px;
     font-size: 16px;
     line-height: 1.5;
