--- a/main.css
+++ b/main.css
@@ -18,7 +18,6 @@
     font-size: 16px;
     line-height: 1.5;
     color: var(--color-text);
-    box-sizing: border-box;
 }
 
 body {
@@ -26,22 +25,20 @@ body {
     overflow-x: hidden;
     background-size: cover;
     width: 100vw;
-    height: 100vh;
-    display: flex;
+    height: 100%;
+    display: grid;
     align-items: center;
-    justify-content: center;
+    justify-items: center;
 }
 
 .contact-us {
     background: var(--color-bg);
-    padding: 50px 20px;
+    padding: 50px 100px;
     border: 2px solid var(--color-primary);
     border-radius: 15px;
     box-shadow: 15px 15px 1px var(--color-primary), 15px 15px 1px 2px black;
     margin-top: 50px;
     margin-bottom: 50px;
-    width: 100%;
-    max-width: 600px;
 }
 
 .form-section,
@@ -63,8 +60,9 @@ div, p {
 
 form {
     padding: var(--ruler);
-    width: 100%;
+    width: calc(var(--ruler) * 20);
     margin: 0 auto;
+    max-width: 600px;
 }
 
 input, select {
@@ -77,8 +75,6 @@ input, select {
     color: var(--color-text);
     text-shadow: 1px 1px 0 var(--color-white);
     box-shadow: inset 2px 2px 5px var(--color-shadow), inset -5px -5px 10px var(--color-white);
-    width: 100%;
-    margin-bottom: 15px;
 }
 
 select {
@@ -86,7 +82,7 @@ select {
     -webkit-appearance: none;
     -moz-appearance: none;
     background: var(--color-input) url('data:image/svg+xml;utf8,<svg fill="black" height="16" viewBox="0 0 24 24" width="16" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>') no-repeat right 10px center;
-    padding-right: 35px;
+    padding-right: 15px; 
 }
 
 input:focus, select:focus {
@@ -108,7 +104,6 @@ input:focus, select:focus {
 .judul {
     margin-bottom: 20px;
     font-size: 1.5rem;
-    text-align: center;
 }
 
 button {
@@ -122,7 +117,7 @@ button {
     outline: none;
     border: 1px solid black;
     box-shadow: 3px 3px 1px 1px #95a4ff, 3px 3px 1px 2px black;
-    margin-top: 20px;
+    margin-top: 20px
 }
 
 button:hover {
@@ -131,17 +126,55 @@ button:hover {
     border: 1px solid black;
 }
 
+/* Media Queries */
+@media (max-width: 1200px) {
+    .contact-us {
+        padding: 40px 80px;
+    }
+    .logo {
+        width: 250px;
+    }
+}
+
+@media (max-width: 992px) {
+    .contact-us {
+        padding: 30px 60px;
+    }
+    .logo {
+        width: 200px;
+    }
+}
+
 @media (max-width: 768px) {
     .contact-us {
-        padding: 30px 15px;
+        padding: 20px 40px;
     }
+    .logo {
+        width: 150px;
+    }
+    .judul {
+        font-size: 1.2rem;
+    }
+    button {
+        padding: 0 15px;
+    }
+}
 
+@media (max-width: 576px) {
+    .contact-us {
+        padding: 10px 20px;
+    }
     form {
+        padding: 0 10px;
         width: 100%;
     }
-
-    input, select {
-        font-size: 14px;
-        padding: 10px;
+    .logo {
+        width: 100px;
+    }
+    .judul {
+        font-size: 1rem;
+    }
+    button {
+        padding: 0 10px;
     }
 }
