--- a/main.css
+++ b/main.css
@@ -126,3 +126,78 @@ button:hover {
     border: 1px solid black;
 }
 
+/* Media Queries */
+@media (max-width: 1200px) {
+    .contact-us {
+        padding: 40px 80px;
+        margin: 20px 20px;
+    }
+    .logo {
+        width: 250px;
+    }
+}
+
+@media (max-width: 992px) {
+    .contact-us {
+        padding: 30px 60px;
+        margin: 20px 20px;
+    }
+    .logo {
+        width: 200px;
+    }
+}
+
+@media (max-width: 768px) {
+    .contact-us {
+        padding: 20px 40px;
+        margin: 20px 20px;
+    }
+    .logo {
+        width: 180px;
+    }
+    .judul {
+        font-size: 1.2rem;
+    }
+    button {
+        padding: 0 15px;
+    }
+}
+
+@media (max-width: 576px) {
+    .contact-us {
+        padding: 10px 20px;
+        margin: 20px 20px;
+    }
+    form {
+        padding: 0 10px;
+        width: 100%;
+    }
+    .logo {
+        width: 120px;
+    }
+    .judul {
+        font-size: 1rem;
+    }
+    button {
+        padding: 0 10px;
+    }
+}
+@media (max-width: 360px) {
+    .contact-us {
+        padding: 5px 8px;
+        margin: 20px 20px;
+    }
+    form {
+        padding: 0 10px;
+        width: 100%;
+    }
+    .logo {
+        width: 100px;
+    }
+    .judul {
+        font-size: 1rem;
+    }
+    button {
+        padding: 0 10px;
+    }
+}
