--- a/main.css
+++ b/main.css
@@ -39,6 +39,7 @@ body {
     box-shadow: 15px 15px 1px var(--color-primary), 15px 15px 1px 2px black;
     margin-top: 50px;
     margin-bottom: 50px;
+    margin-right: 20px;
 }
 
 .form-section,
@@ -167,6 +168,7 @@ button:hover {
     .contact-us {
         padding: 10px 20px;
         margin: 20px 20px;
+        padding-right: 20px;
     }
     form {
         padding: 0 10px;
@@ -186,6 +188,7 @@ button:hover {
     .contact-us {
         padding: 5px 8px;
         margin: 20px 20px;
+        padding-right: 20px;
     }
     form {
         padding: 0 10px;
