--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 :root {
-    --color-back: #7FA1C3;
+    --color-back: #ED9455;
     --color-primary: #6482AD;
     --color-secondary: #E2DAD6;
     --color-bg: #F5EDED;
